<resources>
    <string name="app_name">背诵宝</string>
    <string name="loading">加载中...</string>
    <string name="loading_text">加载中...</string>
    <string name="user_name">账号</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="input_search_text">请输入搜索内容</string>
    <string name="primary">小学</string>
    <string name="junior">初中</string>
    <string name="high">高中</string>
    <string name="password_second">确认密码</string>
    <string name="song_blank_text">宋词填空</string>
    <string name="tang_blank_text">唐诗填空</string>
    <string name="glorious_recyclerview_loading_more">正在加载更多</string>
    <string name="load_failed_bottom">加载失败,点击重新加载</string>
    <string name="no_more_text">没有更多信息</string>
    <string name="last_poem">上一首</string>
    <string name="next_poem">下一首</string>
    <string name="submit">提交</string>
    <string name="show_correct">查看</string>
    <string name="continue_text">继续</string>
    <string name="reblank">重填</string>
    <string name="user_name_null">请输入用户名</string>
    <string name="password_null">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="logining">登录中...</string>
    <string name="password_second_null">请输入确认密码</string>
    <string name="password_unequals">两次密码输入不一致</string>
    <string name="all_right">恭喜你，全部正确</string>
    <string name="confirmgame_text">诗词大冲关</string>
    <string name="confirmgame_tang">唐诗冲关</string>
    <string name="confirmgame_song">宋词冲关</string>
    <string name="recite_song">宋词背诵</string>
    <string name="recite_tang">唐诗背诵</string>
    <string name="transition_name_card">cardview</string>
    <string name="user_name_long">用户名太长</string>
    <string name="password_long">密码太长</string>
    <string name="regist_failed">注册失败</string>
    <string name="has_user">该账号已注册</string>
    <string name="no_user">用户不存在</string>
    <string name="password_error">密码错误</string>
    <string name="no_user_or_password">用户不存在或密码错误</string>
    <string name="regist_success">注册成功</string>
    <string name="song_chongguan_text">宋词冲关</string>
    <string name="tang_chongguan_text">唐诗冲关</string>
    <string name="beisong_song">宋词背诵</string>
    <string name="beisong_tang">唐诗背诵</string>
    <string name="load_failed">加载数据失败</string>
    <string name="no_data">加载失败，没有数据</string>
    <string name="learn_history">诗词学习记录</string>
    <string name="poetry_detail">诗词详情</string>
    <string name="history_text">学习记录</string>
    <string name="search_text">搜索</string>
    <string name="xunfei_app_id">5ae1828b</string>
    <string name="play_text">播放</string>

    <string formatted="false" name="tts_toast_format">缓冲进度为%d%%，播放进度为%d%%</string>
    <string name="data_init_no">数据还未初始化完成，请稍后重试</string>
    <string name="pause_text">暂停</string>
    <string name="init_xunfei_fail">初始化讯飞语音插件失败</string>
    <string name="play_complete">播放完成</string>
    <string name="play_continue">继续播放</string>
    <string name="play_pause">暂停播放</string>
    <string name="play_start">开始播放</string>
    <string name="init_xunfei_fail2">初始化语音失败</string>
    <string name="init_xunfei_fail3">语音合成失败</string>
    <string name="replay_text">重播</string>
    <string name="input_keyword_text">请输入令牌</string>
    <string name="set_keyword">设置令牌</string>
    <string name="sure_text">确定</string>
    <string name="keyword_nll">请输入令牌</string>
    <string name="remember_password">记住密码</string>
    <string name="exchange_user">切换账号</string>
    <string name="auto_login_success">自动登录成功</string>
    <string name="quering_text">正在查询</string>
    <string name="input_null">请输入内容</string>
    <string name="round_text">第%1$d回合</string>
    <string name="null_poetry">——数据库中未查询到该数据</string>
    <string name="flying_order_success">匹配成功</string>
    <string name="flying_order_success_half">匹配不完整</string>
    <string name="flying_order_no_match">诗句不匹配</string>
    <string name="flying_order_no_poetry">未查询到该诗句</string>
    <string name="flying_order_reinput">已重复</string>
    <string name="vs">VS</string>
    <string name="chongfu_text">——已重复</string>
    <string name="get_no_poetry">未获取到诗句内容</string>
    <string name="text_begin">请开始说话…</string>
    <string name="no_match_data">该令牌诗词已全部查询完成。</string>
    <string name="get_no_datas">未获取到数据</string>
    <string name="get_data_failed">获取数据失败</string>
    <string name="loading_data">正在加载数据，请稍候再试</string>


    <!--讯飞语音可配置参数-->
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="engine_values">
        <item>local</item>
        <item>cloud</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>

    <string-array name="perpon_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
    </string-array>

    <string-array name="keywords">
        <item>日</item>
        <item>月</item>
        <item>水</item>
        <item>火</item>
        <item>风</item>
        <item>云</item>
        <item>阴</item>
        <item>阳</item>
        <item>天</item>
        <item>地</item>
        <item>人</item>
        <item>山</item>
        <item>花</item>
        <item>酒</item>
        <item>夜</item>
        <item>梦</item>
        <item>笑</item>
        <item>醉</item>
        <item>春</item>
        <item>柳</item>
        <item>秋</item>
        <item>雨</item>
        <item>雪</item>
        <item>梅</item>
        <item>有</item>
        <item>无</item>
        <item>空</item>
        <item>一</item>
        <item>千</item>
        <item>万</item>
        <item>青</item>
        <item>红</item>
        <item>绿</item>
        <item>黄</item>
        <item>白</item>
        <item>明</item>
        <item>长</item>
        <item>声</item>
        <item>烟</item>
        <item>马</item>
        <item>草</item>
        <item>树</item>
        <item>国</item>
        <item>城</item>
        <item>村</item>
        <item>乡</item>
        <item>家</item>
        <item>楼</item>
        <item>东</item>
        <item>西</item>
        <item>上</item>
        <item>下</item>
        <item>高</item>
        <item>低</item>
        <item>前</item>
        <item>后</item>
        <item>中</item>
        <item>处</item>
        <item>尽</item>
        <item>行</item>
        <item>看</item>
        <item>望</item>
        <item>见</item>
        <item>闻</item>
        <item>知</item>
        <item>问</item>
        <item>起</item>
        <item>飞</item>
        <item>来</item>
        <item>去</item>
        <item>到</item>
        <item>生</item>
        <item>此</item>
        <item>又</item>
        <item>相</item>
        <item>向</item>
        <item>我</item>
        <item>歌</item>
        <item>情</item>
        <item>寒</item>
        <item>江</item>
        <item>孤</item>
        <item>晚</item>
        <item>时</item>
        <item>晓</item>
        <item>新</item>
        <item>子</item>
        <item>桃花</item>
        <item>梨花</item>
        <item>菊花</item>
        <item>花开</item>
        <item>春风</item>
        <item>东风</item>
        <item>西风</item>
        <item>明月</item>
        <item>青天</item>
        <item>青山</item>
        <item>百日</item>
        <item>山河</item>
        <item>桃李</item>
        <item>天涯</item>
        <item>相逢</item>
        <item>人家</item>
        <item>黄昏</item>
        <item>不知</item>
        <item>风雨</item>
        <item>长安</item>
        <item>扬州</item>
        <item>洛阳</item>
        <item>西湖</item>
    </string-array>
</resources>
