<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/normal_bg">
    <include layout="@layout/base_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_centerInParent="true">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name">

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_user_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/login"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_login_selector"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/btn_regist"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/regist"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_login_selector"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</RelativeLayout>