<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/normal_bg">
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/iv_back"/>
    <ImageView
        android:id="@+id/iv_blank"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:src="@drawable/tang_blank"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:id="@+id/iv_recite"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:src="@drawable/tang_recite"
        android:layout_below="@+id/iv_blank"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:id="@+id/iv_poem_game"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:src="@drawable/poem_game"
        android:layout_below="@+id/iv_recite"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"/>

    <RadioGroup
        android:id="@+id/rg_games"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <RadioButton
            android:id="@+id/rb_primary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@color/rb_text_color_selector"
            android:background="@drawable/rb_backgroud_selector"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/primary"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"/>
        <RadioButton
            android:id="@+id/rb_junior"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@color/rb_text_color_selector"
            android:background="@drawable/rb_backgroud_selector"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/junior"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"/>
        <RadioButton
            android:id="@+id/rb_high"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@color/rb_text_color_selector"
            android:background="@drawable/rb_backgroud_selector"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/high"/>
    </RadioGroup>

</RelativeLayout>